attempt to fix modal scrolling issue on mobile

--- a/public/css/localstyles.css
+++ b/public/css/localstyles.css
@@ -1,5 +1,7 @@
 body.modal-open {
 	overflow-y: hidden;
+	position: fixed;
+	width: 100%;
 }
 
 @font-face {
